--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "eslint": "^8.9.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import-helpers": "^1.2.1",
