--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TS-SOLID",
+  "name": "solid",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/neresleonardo/TS-SOLID.git",
